--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^17.0.1",
+    "node-fetch": "^3.3.2",
     "openai": "^5.8.2",
     "readline-sync": "^1.4.10"
   }
